--- a/JavaScript/16_AXIOS/index.html
+++ b/JavaScript/16_AXIOS/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Axios</title>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="js/script.js" defer></script>
   </head>
   <body>
     <h1>Axios</h1>
+    <form id="post-form">
+      <div>
+        <input type="text" id="title" placeholder="Seu nome" />
+      </div>
+      <div>
+        <input type="text" id="body" placeholder="Sobre Nome" />
+      </div>
+      <input type="submit" value="Enviar" />
+    </form>
+
+    <div id="user-container"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
